--- a/survey.tex
+++ b/survey.tex
@@ -14,10 +14,10 @@
 
 Graph sparsification produces sparse approximations of input graphs.  In
 this paper we survey major results in spectral sparsification, a special
-case in which important algebraic properties of graphs are preserved.  We
-provide intuition and rigour by explaining a key result: that every graph
-has a spectral sparsifier with $O(|V|\log|V|)$ edges.  We finish by
-discussing applications of spectral sparsification, such as computing
+case in which important structural and algebraic properties of graphs are
+preserved.  We provide intuition for the theory by explaining a key result:
+that every graph has a spectral sparsifier with $O(\epsilon^{-2}|V|\log|V|)$
+edges w.h.p. We finish by discussing some applications, such as computing
 electrical flows and finding min $s$-$t$ cuts.
 
 \section*{Introduction}
