--- a/ref.bib
+++ b/ref.bib
@@ -19,10 +19,32 @@
 @article{TheSurvey,
   title={Spectral sparsification of graphs: theory and algorithms},
   author={Batson, Joshua and Spielman, Daniel A and Srivastava, Nikhil and Teng, Shang-Hua},
-  journal={communications of the acm},
+  journal={Communications of the acm},
   volume={56},
   number={8},
   pages={87--94},
   year={2013},
   publisher={ACM}
+}
+
+@article{Fiedler,
+  title={Algebraic connectivity of graphs},
+  author={Fiedler, Miroslav},
+  journal={Czechoslovak Mathematical Journal},
+  volume={23},
+  number={2},
+  pages={298--305},
+  year={1973},
+  publisher={Institute of Mathematics, Academy of Sciences of the Czech Republic}
+}
+
+@article{SpielmanTeng,
+  title={Spectral sparsification of graphs},
+  author={Spielman, Daniel A and Teng, Shang-Hua},
+  journal={SIAM Journal on Computing},
+  volume={40},
+  number={4},
+  pages={981--1025},
+  year={2011},
+  publisher={SIAM}
 }
