--- a/ref.bib
+++ b/ref.bib
@@ -48,3 +48,14 @@
   year={2011},
   publisher={SIAM}
 }
+
+@article{SpielmanSrivastava,
+  title={Graph sparsification by effective resistances},
+  author={Spielman, Daniel A and Srivastava, Nikhil},
+  journal={SIAM Journal on Computing},
+  volume={40},
+  number={6},
+  pages={1913--1926},
+  year={2011},
+  publisher={SIAM}
+}
