--- a/survey.tex
+++ b/survey.tex
@@ -50,8 +50,8 @@ edge-sampling scheme. Section 4 mentions some applications.
 \section{Graph Similarity}
 
 In this section we explain how \textit{cut similarity} naturally leads to
-\textit{spectral similarity}, a strictly stronger criterion for measuring
-the quality of a sparsifier. 
+\textit{spectral similarity}, a strictly stronger measure of the quality of
+a sparsifier.
 
 \subsection{Conventions}
 
@@ -84,9 +84,9 @@ found quickly: \\
 
 \noindent
 \textlcsc{Theorem 1 (Bencz\'{u}r-Karger)}: \textit{Let $\epsilon > 0$. $G =
-(V, E)$ has an $\epsilon$-cut similar graph $\tilde{G} \subset G$ s.t
-$\tilde{m} \in O(\epsilon^{-2}n\log n)$. $\tilde{G}$ can be found in
-$O(m\log^3n + \epsilon^{-2}m\log n)$ time \cite{BenczurKarger}.} \\
+(V, E)$ has an $\epsilon$-cut similar subgraph $\tilde{G}$ s.t $\tilde{m}
+\in O(\epsilon^{-2}n\log n)$. $\tilde{G}$ can be found in $O(m\log^3n +
+\epsilon^{-2}m\log n)$ time \cite{BenczurKarger}.} \\
 
 This version of Theorem 1 is taken from a later survey \cite{TheSurvey}. The
 original paper claims that an even better $O(m\log^2 n)$ time bound is
@@ -224,8 +224,8 @@ into high-conductance components, and by prioritizing the edges between
 these components. This led to the following result: \\
 
 \noindent
-\textlcsc{Theorem 2 (Spielman-Teng)}: \textit{Let $\epsilon > 0$. $G = (V,
-E)$ has an $\epsilon$-spectrally similar graph $\tilde{G} \subset G$ s.t
+\textlcsc{Theorem 2 (Spielman-Teng)}: \textit{Let $\epsilon > 0$. W.h.p $G =
+(V, E)$ has an $\epsilon$-spectrally similar subgraph $\tilde{G}$ s.t
 $\tilde{m} \in O(\epsilon^{-2}n\log^2 n)$. $\tilde{G}$ can be found in
 $O(m\log^{O(1)}m)$ time \cite{SpielmanTeng} \cite{TheSurvey}.} \\
 
@@ -236,7 +236,13 @@ covers a fast spectral sparsification algorithm in detail.
 
 \section{Fast Spectral Sparsification}
 
-start by stating end result
+The goal of this section is to examine the following theorem in detail: \\
+
+\noindent
+\textlcsc{Theorem 3 (Spielman-Srivastava)}: \textit{Let $\epsilon > 0$.
+W.h.p $G = (V, E)$ has an $\epsilon$-spectrally similar subgraph $\tilde{G}$
+s.t $\tilde{m} \in O(\epsilon^{-2}n\log n)$. $\tilde{G}$ can be found in
+$\tilde{O}(m)$ time \cite{SpielmanSrivastava} \cite{TheSurvey}.} \\
 
 A few facts about $L_G$:
 \begin{enumerate}[1.]
